alignment fixed

--- a/src/assets/stylesheets/home_page_devision.scss
+++ b/src/assets/stylesheets/home_page_devision.scss
@@ -3,4 +3,5 @@
   font-family: "Roboto", sans-serif;
   display: grid;
   grid-template-columns: 6% 69% 25%;
+  align-items: start;
 }
