--- a/src/assets/stylesheets/tag.scss
+++ b/src/assets/stylesheets/tag.scss
@@ -1,6 +1,6 @@
 .tag_main_container {
   // height: 95vh;
-  margin: auto 0;
+  margin: 20px 0;
   margin-right: 25px;
   border-radius: 20px;
   box-shadow: 7px 7px 15px #bbcfda, -8px -8px 15px #fff;
